@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+Interface:
+* Fixed alphabetical ordering in FeatureStructure->get_ufeatures().
+
 Drivers:
 * Fixed MUL::Uposf. Decoding was incorrect for features that are named differently in UD and in Interset.
 
